--- a/mongodb/mongodb-secret.yaml
+++ b/mongodb/mongodb-secret.yaml
@@ -1,8 +1,9 @@
+# MongoDB Secret (No changes needed)
 apiVersion: v1
 kind: Secret
 metadata:
   name: mongodb-secret
 type: Opaque
 data:
-  mongo-root-username: bW9uZ29hZG1pbg==  # Base64 encoded 'mongoadmin'
-  mongo-root-password: c2VjdXJlcGFzc3dvcmQ=  # Base64 encoded 'securepassword'
+  mongo-root-username: bW9uZ29hZG1pbg==
+  mongo-root-password: c2VjdXJlcGFzc3dvcmQ=
